# crows.moe

./: .babelrc  .babelrc.js  .dockerignore  .eslintrc  .eslintrc.js  .firebaserc  .gitignore  Dockerfile  README.md  articles  db.sqlite3  firebase.json  flake.nix  gatsby-config.js  gatsby-node.js  index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  razzle.config.js  requirements.txt  static-loader.ts  tailwind.config.js  webpack.config.js
aboutme/: views.py
articles/: My Obsidian Rulebook.mdx
blog/: .eslintrc  admin.py  feeds.py  form.py  justfile  models.py  package-lock.json  sidebar.py  urls.py  views.py
cms/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
contact/: admin.py  form.py  models.py  urls.py  views.py
crows/: apps.py  forms.py  urls.py  views.py
dev_server/: go.mod  main.go
generator/: go.mod  main.go
homepage/: urls.py  views.py
infra/: .terraform.lock.hcl  blog.tf  ema-next.tf  ema.tf  main.tf  mediavote-web.tf  urldrbot.tf
mediavote/: README.md
mediavote-api/: Dockerfile  compose.yaml  go.mod  go.sum  gqlgen.yml  justfile  main.go  server.go
mediavote-web/: Dockerfile  codegen.ts  graphql.schema.json  justfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
msgboard/: urls.py  views.py
mysite/: private_settings.template  settings.py  settings.py~  urls.py  urls.py~
public/: index.html  template.html
service/urldbot-rs/: Cargo.toml
service/urldbot-rs/src/: doctors.rs  main.rs
src/: App.css  App.js  client.js  index.js  (+4 more)
(+667 files in other folders)
