[package]
name = "urldbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = {version = "0.7.4", features = ["http2"]}
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
telegram_types = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
